--- a/README
+++ b/README
@@ -26,4 +26,4 @@ Bienvenue dans notre CRM (Customer Relationship Management) développé en Java.
 
 1. Clonez le dépôt GitHub sur votre machine locale.
    ```bash
-   git clone https://github.com/votre-utilisateur/votre-repo.git
+   gh repo clone Anthony-Bastide/Java-CRM
